--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
